<resources>
    <string name="app_name">LetsCook</string>
    <string name="registrarbutname">Registrar</string>
    <string name="logintextbut">Login</string>
    <string name="titleLogin">Login</string>
    <string name="eMail">E-Mail</string>
    <string name="password">Password</string>
    <string name="text_home_title0">Descubre</string>
    <string name="text_home_title1"> lo nuevo!</string>
    <string name="home_boton_recetas">Recetas</string>
    <string name="home_boton_bebidas">Bebidas</string>
    <string name="home_boton_top10">Top 10</string>
    <string name="home_boton_perfil">Perfil</string>
    <!--Activity Login-->
    <string name="login_google">Login with Google</string>

    <!-- Activity Register-->
    <string name="Registro">Registro</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="Contraseña">Contraseña</string>
    <string name="recontraseña">Re-Contraseña</string>

    <!--Activity Recetas-->
    <string name="hint_busqueda">Busca la receta que quieres!</string>
    <string name="text_resultados">Resultados</string>

    <!--Defaul String-->
    <string name="Imagen">Imagen</string>
    <string name="text_default">INSERTE TEXTO</string>

    <!--receta_detailActivity-->
    <string name="ingredientes">Ingredientes</string>
    <string name="dirrecion">Dirección</string>
    <!--celda_direcciones-->
    <string name="ver_video">ver video</string>
    <string name="paso">Paso</string>
    <string name="es_hora_de_cocinar">Es hora de cocinar!</string>
    <string name="ver_paso">ver paso</string>
    <string name="Complete">Acceso Correcto</string>
    <string name="Error">Error</string>
</resources>

