<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.RegisterActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="95dp"
        android:alpha="0.8"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Imagen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ingredien" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/arizonia"
        android:text="@string/Registro"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="413dp"
        android:layout_height="636dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/registroNombreTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/registroApellidoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Apellido"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/registroEmailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/eMail"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/registroEdadTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/registroContraseñaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/registroRecontraseñaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/recontraseña"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/backlogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.37">



            <com.dd.processbutton.iml.ActionProcessButton
                android:id="@+id/loginRegisterBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/registrarbutname"
                android:textColor="#ffffff"
                app:pb_colorNormal="@color/loginbut"
                app:pb_colorPressed="@color/loginbutpress"
                app:pb_colorComplete="@color/cpb_green_dark"
                app:pb_textComplete="Registro Completo"
                app:pb_textError="Error"
                app:pb_colorError="#BDBDBD"
                app:pb_textProgress="Registrando..."
                app:pb_colorProgress="#ffffff"
                app:pb_cornerRadius="45dp"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>