<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <ImageView
        android:id="@+id/backlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Imagen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mainfondo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Imagen"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backlogin"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/fondotrans" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Imagen"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:outlineProvider="paddedBounds"
        app:layout_constraintBottom_toBottomOf="@+id/backlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginbut"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/butradioregister"
            android:fontFamily="sans-serif-black"
            android:text="@string/logintextbut"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginRegisterBt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/butradio"
            android:fontFamily="sans-serif-black"
            android:text="@string/registrarbutname"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>